Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 <p>Redmine Jenkins is completely free and open source and released under the <a href="https://github.com/jbox-web/redmine_jenkins/blob/devel/LICENSE">GPL 2 License</a>.</p>
 
-<p>Copyright (c) 2014 Nicolas Rodriguez (<a href="mailto:nrodriguez@jbox-web.com">nrodriguez@jbox-web.com</a>), JBox Web (<a href="http://www.jbox-web.com">http://www.jbox-web.com</a>)</p>
+<p>Copyright (c) 2014 Nicolas Rodriguez (<a href="mailto:nrodriguez@jbox-web.com">nrodriguez@jbox-web.com</a>), JBox Web (<a href="http://www.jbox-web.com">http://www.jbox-web.com</a>) <a href="https://coderwall.com/n-rodriguez"><img src="https://api.coderwall.com/n-rodriguez/endorsecount.png" alt="endorse"></a></p>
 
 <p>Copyright (c) 2012-2014 Toshiyuki Ando, r-labs</p>
 
