Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -4,65 +4,62 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Redmine Jenkins by jbox-web</title>
+
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script src="javascripts/respond.js"></script>
-    <!--[if lt IE 9]>
-      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-    <!--[if lt IE 8]>
-    <link rel="stylesheet" href="stylesheets/ie.css">
-    <![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
   <body>
-      <div id="header">
-        <nav>
-          <li class="fork"><a href="https://github.com/jbox-web/redmine_jenkins">View On GitHub</a></li>
-          <li class="downloads"><a href="https://github.com/jbox-web/redmine_jenkins/zipball/master">ZIP</a></li>
-          <li class="downloads"><a href="https://github.com/jbox-web/redmine_jenkins/tarball/master">TAR</a></li>
-          <li class="title">DOWNLOADS</li>
-        </nav>
-      </div><!-- end header -->
-
     <div class="wrapper">
+      <header>
+        <h1>Redmine Jenkins</h1>
+        <p>A Redmine plugin which makes building your Jenkins projects easy ;)</p>
 
+        <p class="view"><a href="https://github.com/jbox-web/redmine_jenkins">View the Project on GitHub <small>jbox-web/redmine_jenkins</small></a></p>
+
+
+        <ul>
+          <li><a href="https://github.com/jbox-web/redmine_jenkins/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/jbox-web/redmine_jenkins/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/jbox-web/redmine_jenkins">View On <strong>GitHub</strong></a></li>
+        </ul>
+      </header>
       <section>
-        <div id="title">
-          <h1>Redmine Jenkins</h1>
-          <p>A Redmine plugin which makes building your Jenkins projects easy ;)</p>
-          <hr>
-          <span class="credits left">Project maintained by <a href="https://github.com/jbox-web">jbox-web</a></span>
-          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
-        </div>
+        <h2>
+<a id="-redmine-jenkins-plugin" class="anchor" href="#-redmine-jenkins-plugin" aria-hidden="true"><span class="octicon octicon-link"></span></a>
+<img src="https://raw.github.com/jbox-web/redmine_jenkins/gh-pages/images/jenkins_logo.png" alt="logo"> Redmine Jenkins Plugin</h2>
 
-        <p>This plugin allows straightforward management of Jenkins projects within Redmine.</p>
+<p><a href="https://codeclimate.com/github/jbox-web/redmine_jenkins"><img src="https://codeclimate.com/github/jbox-web/redmine_jenkins.png" alt="Code Climate"></a>
+<a href="https://travis-ci.org/jbox-web/redmine_jenkins"><img src="https://travis-ci.org/jbox-web/redmine_jenkins.svg?branch=devel" alt="Build Status"></a>
+<a href="https://gemnasium.com/jbox-web/redmine_jenkins"><img src="https://gemnasium.com/jbox-web/redmine_jenkins.svg" alt="Dependency Status"></a>
+<a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=FBT7E7DAVVEEU"><img src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" alt="Donate"></a></p>
+
+<h2>
+<a id="a-redmine-plugin-which-makes-building-your-jenkins-projects-easy-" class="anchor" href="#a-redmine-plugin-which-makes-building-your-jenkins-projects-easy-" aria-hidden="true"><span class="octicon octicon-link"></span></a>A Redmine plugin which makes building your Jenkins projects easy ;)</h2>
+
+<p>This plugin allows straightforward management of Jenkins projects within Redmine.</p>
 
 <p>You can follow announcements <a href="https://github.com/jbox-web/redmine_jenkins/wiki/Announcements">here</a> or take a look at the <a href="https://github.com/jbox-web/redmine_jenkins/wiki/Roadmap">roadmap</a>.</p>
 
 <h2>
-<a name="code-status" class="anchor" href="#code-status"><span class="octicon octicon-link"></span></a>Code status</h2>
-
-<ul>
-<li><a href="https://codeclimate.com/github/jbox-web/redmine_jenkins"><img src="https://codeclimate.com/github/jbox-web/redmine_jenkins.png" alt="Code Climate"></a></li>
-</ul><h2>
-<a name="installation" class="anchor" href="#installation"><span class="octicon octicon-link"></span></a>Installation</h2>
+<a id="installation" class="anchor" href="#installation" aria-hidden="true"><span class="octicon octicon-link"></span></a>Installation</h2>
 
 <p>Read the documentation and more in the <a href="https://github.com/jbox-web/redmine_jenkins/wiki">Wiki</a>.</p>
 
 <h2>
-<a name="copyrights--license" class="anchor" href="#copyrights--license"><span class="octicon octicon-link"></span></a>Copyrights &amp; License</h2>
+<a id="copyrights--license" class="anchor" href="#copyrights--license" aria-hidden="true"><span class="octicon octicon-link"></span></a>Copyrights &amp; License</h2>
 
 <p>Redmine Jenkins is completely free and open source and released under the <a href="https://github.com/jbox-web/redmine_jenkins/blob/devel/LICENSE">GPL 2 License</a>.</p>
 
-<p>Copyright (c) 2014 Nicolas Rodriguez (<a href="mailto:nrodriguez@jbox-web.com">nrodriguez@jbox-web.com</a>), JBox Web (<a href="http://www.jbox-web.com">http://www.jbox-web.com</a>) <a href="https://coderwall.com/n-rodriguez"><img src="https://api.coderwall.com/n-rodriguez/endorsecount.png" alt="endorse"></a></p>
+<p>Copyright (c) 2014-2015 Nicolas Rodriguez (<a href="mailto:nrodriguez@jbox-web.com">nrodriguez@jbox-web.com</a>), JBox Web (<a href="http://www.jbox-web.com">http://www.jbox-web.com</a>) <a href="https://coderwall.com/n-rodriguez"><img src="https://api.coderwall.com/n-rodriguez/endorsecount.png" alt="endorse"></a></p>
 
 <p>Copyright (c) 2012-2014 Toshiyuki Ando, r-labs</p>
 
 <h2>
-<a name="contribute" class="anchor" href="#contribute"><span class="octicon octicon-link"></span></a>Contribute</h2>
+<a id="contribute" class="anchor" href="#contribute" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contribute</h2>
 
 <p>You can contribute to this plugin in many ways such as :</p>
 
@@ -71,13 +68,18 @@
 <li>Contributing code (features or bugfixes)</li>
 <li>Reporting a bug</li>
 <li>Submitting translations</li>
-</ul><p>You can also donate :)</p>
+</ul>
+
+<p>You can also donate :)</p>
 
 <p><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=FBT7E7DAVVEEU"><img src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" alt="Donate"></a></p>
       </section>
-
+      <footer>
+        <p>This project is maintained by <a href="https://github.com/jbox-web">jbox-web</a></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+      </footer>
     </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+    <script src="javascripts/scale.fix.js"></script>
               <script type="text/javascript">
             var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
             document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
