Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 <p><a href="https://codeclimate.com/github/jbox-web/redmine_jenkins"><img src="https://codeclimate.com/github/jbox-web/redmine_jenkins.png" alt="Code Climate"></a>
 <a href="https://travis-ci.org/jbox-web/redmine_jenkins"><img src="https://travis-ci.org/jbox-web/redmine_jenkins.svg?branch=devel" alt="Build Status"></a>
 <a href="https://gemnasium.com/jbox-web/redmine_jenkins"><img src="https://gemnasium.com/jbox-web/redmine_jenkins.svg" alt="Dependency Status"></a>
+<a href="https://gitter.im/jbox-web/redmine_jenkins?utm_source=badge&amp;utm_medium=badge&amp;utm_campaign=pr-badge"><img src="https://badges.gitter.im/Join%20Chat.svg" alt="Gitter"></a>
 <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=FBT7E7DAVVEEU"><img src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" alt="Donate"></a></p>
 
 <h2>
@@ -52,11 +53,9 @@
 <h2>
 <a id="copyrights--license" class="anchor" href="#copyrights--license" aria-hidden="true"><span class="octicon octicon-link"></span></a>Copyrights &amp; License</h2>
 
-<p>Redmine Jenkins is completely free and open source and released under the <a href="https://github.com/jbox-web/redmine_jenkins/blob/devel/LICENSE">GPL 2 License</a>.</p>
+<p>Redmine Jenkins is completely free and open source and released under the <a href="https://github.com/jbox-web/redmine_jenkins/blob/devel/LICENSE">MIT License</a>.</p>
 
 <p>Copyright (c) 2014-2015 Nicolas Rodriguez (<a href="mailto:nrodriguez@jbox-web.com">nrodriguez@jbox-web.com</a>), JBox Web (<a href="http://www.jbox-web.com">http://www.jbox-web.com</a>) <a href="https://coderwall.com/n-rodriguez"><img src="https://api.coderwall.com/n-rodriguez/endorsecount.png" alt="endorse"></a></p>
-
-<p>Copyright (c) 2012-2014 Toshiyuki Ando, r-labs</p>
 
 <h2>
 <a id="contribute" class="anchor" href="#contribute" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contribute</h2>
