--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Redmine Jenkins</h1>
-      <h2 class="project-tagline">A Redmine plugin which makes building your Jenkins projects easy ;)</h2>
+      <h2 class="project-tagline">A Redmine plugin which makes building your Jenkins projects, easy ;)</h2>
       <a href="https://github.com/jbox-web/redmine_jenkins" class="btn">View on GitHub</a>
       <a href="https://github.com/jbox-web/redmine_jenkins/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/jbox-web/redmine_jenkins/tarball/master" class="btn">Download .tar.gz</a>
